my simple omnifood project starts here

--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
@@ -17,7 +17,15 @@
 <body>
     <header class="header">
         <img class="logo" src="img/omnifood-logo.png" alt="">
-        <nav class="navigation">Navigation</nav>
+        <nav class="main--nav">
+            <ul class="nav--list">
+                <li> <a class="navigation--link" href="#"> section 1</a> </li>
+                <li> <a class="navigation--link" href="#"> section 2</a> </li>
+                <li> <a class="navigation--link" href="#"> section 3</a> </li>
+                <li> <a class="navigation--link" href="#"> section 4</a> </li>
+                <li> <a class="navigation--link link--cta" href="#"> section 5</a> </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section class="section--hero">
