Omnifood project starter

--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
@@ -60,6 +60,34 @@
                 </div>
             </div>
         </section>
+        <section class="section--how">
+            <div class="containor">
+                <div class="green"> o1</div>
+                <div class="yellow">02</div>
+                <div class="red">03</div>
+                <div class="black">04</div>
+            </div>
+
+        </section>
+        <section class="section--how">
+            <div class="containor grid--col-3">
+                <div class="green"> o1</div>
+                <div class="yellow">02</div>
+                <div class="red">03</div>
+                <div class="black">04</div>
+            </div>
+
+        </section>
+        </section>
+        <section class="section--how">
+            <div class="containor grid--col-4">
+                <div class="green"> o1</div>
+                <div class="yellow">02</div>
+                <div class="red">03</div>
+                <div class="black">04</div>
+            </div>
+
+        </section>
     </main>
 </body>
 
