--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
@@ -60,31 +60,93 @@
                 </div>
             </div>
         </section>
+
+        <section class="feature--section">
+            <h2 class="heading--feature">As Featured In</h2>
+            <div class="logos">
+                <img src="img/logos/techcrunch.png" alt=" Techcrunch Logo">
+                <img src="img/logos/business-insider.png" alt="Business-insider Logo">
+                <img src="img/logos/the-new-york-times.png" alt="The-new-york-times Logo">
+                <img src="img/logos/forbes.png" alt="Forbes Logo">
+                <img src="img/logos/usa-today.png" alt=" USA-today Logo">
+            </div>
+        </section>
+
         <section class="section--how">
             <div class="containor">
-                <div class="green"> o1</div>
-                <div class="yellow">02</div>
-                <div class="red">03</div>
-                <div class="black">04</div>
+                <span class="subheadingg">How it works</span>
+                <h2 class="heading--secondary"> Your daily dose of health in 3 simple steps</h2>
             </div>
 
-        </section>
-        <section class="section--how">
-            <div class="containor grid--col-3">
-                <div class="green"> o1</div>
-                <div class="yellow">02</div>
-                <div class="red">03</div>
-                <div class="black">04</div>
+            <div class="containor grid grid--2-cols">
+
+                <!-- <span>Step 01 </span> -->
+                <div class="step--text--box">
+                    <span class="step--number">01</span>
+                    <h3 class="heading--tertiary"> Tell us what you like (and what not)</h3>
+                    <p class="step--description"> Never again waste time thinking about what to eat! Omnifood AI will
+                        create a 100%
+                        personalized weekly meal plan just for you. It makes sure you get all the nutrients and vitamins
+                        you need, no matter
+                        what diet you follow!</p>
+                </div>
+                <div class=" step--img--box">
+                    <img class="step--img" src="img/app/app-screen-1.png" alt="app-screen-1">
+                </div>
+            </div>
+            <div class="containor grid grid--2-cols">
+
+                <!-- <span>Step 02</span> -->
+                <div class=" step--img--box">
+                    <img class="step--img" src="img/app/app-screen-2.png" alt="app-screen-1">
+                </div>
+
+                <div class="step--text--box">
+                    <span class="step--number">02</span>
+                    <h3 class="heading--tertiary"> Approve your weekly meal plan </h3>
+                    <p class="step--description"> Once per week, approve the meal plan generated for you by Omnifood AI.
+                        You can change
+                        ingredients, swap entire meals, or even add your own recipes.</p>
+                </div>
+
             </div>
 
+            <div class="containor grid grid--2-cols">
+
+                <!-- <span>Step 03</span> -->
+                <div class="step--text--box">
+                    <span class="step--number">03</span>
+                    <h3 class="heading--tertiary"> Receive meals at convenient time</h3>
+                    <p class="step--description"> Best chefs in town will cook your selected meal every day, and we will
+                        deliver it to
+                        your door whenever works best for you. You can change delivery schedule and address daily!
+                    </p>
+                </div>
+                <div class=" step--img--box">
+                    <img class="step--img" src="img/app/app-screen-3.png" alt="app-screen-1">
+                </div>
+            </div>
         </section>
-        </section>
-        <section class="section--how">
-            <div class="containor grid--col-4">
-                <div class="green"> o1</div>
-                <div class="yellow">02</div>
-                <div class="red">03</div>
-                <div class="black">04</div>
+
+        <section class="section--meals">
+            <div class="heading--meals">
+                <p class="meals--tittle">Omnifood AI chooses from 5,000+ recipes</p>
+            </div>
+            <div class="containor grid grid--3-cols">
+                <div class="meal--img-box">
+
+                    <img src="img/meals/meal-1.jpg" alt="" class="meal--1">
+                    <span class="tag">Vegetarian</span>
+                    <p class="meal--tittle">Japanese Gyozas</p>
+                    <ul class="ingridents">
+                        <li class="atrbutes">650 Calories</li>
+                        <li class="atrbutes">NutriScore :&reg; </li>
+                        <li class="atrbutes">Rating 4.9 (537)</li>
+                    </ul>
+                </div>
+
+                <div>Meals</div>
+                <div>Other</div>
             </div>
 
         </section>
