--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
@@ -10,6 +10,10 @@
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
         rel="stylesheet">
 
+    <!-- Icon API Link -->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
     <link rel="stylesheet" href="./css/style.css">
     <title>Omnifood</title>
 </head>
@@ -133,20 +137,58 @@
                 <p class="meals--tittle">Omnifood AI chooses from 5,000+ recipes</p>
             </div>
             <div class="containor grid grid--3-cols">
+
                 <div class="meal--img-box">
 
-                    <img src="img/meals/meal-1.jpg" alt="" class="meal--1">
-                    <span class="tag">Vegetarian</span>
-                    <p class="meal--tittle">Japanese Gyozas</p>
-                    <ul class="ingridents">
-                        <li class="atrbutes">650 Calories</li>
-                        <li class="atrbutes">NutriScore :&reg; </li>
-                        <li class="atrbutes">Rating 4.9 (537)</li>
-                    </ul>
+                    <img src="img/meals/meal-1.jpg" alt="" class="meal--img meal--img-1">
+                    <diiv class="meal--box">
+                        <span class="tag">Vegetarian</span>
+                        <p class="meal--tittle">Japanese Gyozas</p>
+                        <ul class="ingridents">
+                            <li class="atrbutes"> <ion-icon name="flame-outline"></ion-icon> <span> <strong>&nbsp;
+                                        650</strong> Calories </span></li>
+                            <li class="atrbutes"> <ion-icon name="restaurant-outline"></ion-icon><span> &nbsp;NutriScore
+                                    &reg;</span> </li>
+                            <li class="atrbutes"> <ion-icon name="star-outline"></ion-icon> <span>&nbsp; Rating <strong>
+                                        4.9 </strong> (537)</span> </li>
+                        </ul>
+                    </diiv>
                 </div>
 
-                <div>Meals</div>
-                <div>Other</div>
+                <div class="meal--img-box">
+
+                    <img src="img/meals/meal-2.jpg" alt="" class="meal--img meal--img-2">
+                    <diiv class="meal--box">
+                        <span class="tag">Avocado </span>
+                        <span class="tag tag--2">Salad</span>
+                        <p class="meal--tittle">Vegan and Paleo</p>
+                        <ul class="ingridents">
+                            <li class="atrbutes"> <ion-icon name="flame-outline"></ion-icon> <span> <strong>&nbsp;
+                                        650</strong> Calories </span></li>
+                            <li class="atrbutes"> <ion-icon name="restaurant-outline"></ion-icon><span> &nbsp;NutriScore
+                                    &reg;</span> </li>
+                            <li class="atrbutes"> <ion-icon name="star-outline"></ion-icon> <span>&nbsp; Rating <strong>
+                                        4.8 </strong> (441)</span> </li>
+                        </ul>
+                    </diiv>
+                </div>
+
+                <div class="meal--img-box hid">
+
+                    <img src="img/meals/meal-1.jpg" alt="" class="meal--img meal--img-3">
+                    <diiv class="meal--box">
+                        <span class="tag">Vegetarian</span>
+                        <p class="meal--tittle">Japanese Gyozas</p>
+                        <ul class="ingridents">
+                            <li class="atrbutes"> <ion-icon name="flame-outline"></ion-icon> <span> <strong>&nbsp;
+                                        650</strong> Calories </span></li>
+                            <li class="atrbutes"> <ion-icon name="restaurant-outline"></ion-icon><span> &nbsp;NutriScore
+                                    &reg;</span> </li>
+                            <li class="atrbutes"> <ion-icon name="star-outline"></ion-icon> <span>&nbsp; Rating <strong>
+                                        4.9 </strong> (537)</span> </li>
+                        </ul>
+                    </diiv>
+                </div>
             </div>
 
         </section>
