Update meal section styling and structure with new CSS classes and improved HTML layout

--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
@@ -159,9 +159,10 @@
 
                     <img src="img/meals/meal-2.jpg" alt="" class="meal--img meal--img-2">
                     <diiv class="meal--box">
-                        <span class="tag">Avocado </span>
-                        <span class="tag tag--2">Salad</span>
-                        <p class="meal--tittle">Vegan and Paleo</p>
+                        <span class="tag">Vegan</span>
+                        <span class="tag tag--2">Paleo</span>
+                        <p class="meal--tittle">Avocado
+                            Salad</p>
                         <ul class="ingridents">
                             <li class="atrbutes"> <ion-icon name="flame-outline"></ion-icon> <span> <strong>&nbsp;
                                         650</strong> Calories </span></li>
@@ -173,24 +174,35 @@
                     </diiv>
                 </div>
 
-                <div class="meal--img-box hid">
-
-                    <img src="img/meals/meal-1.jpg" alt="" class="meal--img meal--img-3">
-                    <diiv class="meal--box">
-                        <span class="tag">Vegetarian</span>
-                        <p class="meal--tittle">Japanese Gyozas</p>
-                        <ul class="ingridents">
-                            <li class="atrbutes"> <ion-icon name="flame-outline"></ion-icon> <span> <strong>&nbsp;
-                                        650</strong> Calories </span></li>
-                            <li class="atrbutes"> <ion-icon name="restaurant-outline"></ion-icon><span> &nbsp;NutriScore
-                                    &reg;</span> </li>
-                            <li class="atrbutes"> <ion-icon name="star-outline"></ion-icon> <span>&nbsp; Rating <strong>
-                                        4.9 </strong> (537)</span> </li>
-                        </ul>
-                    </diiv>
+                <div class="meal--item-box ">
+                    <h3 class="item--heading"> Omnifood works with any diet</h3>
+                    <ul class="item--box">
+                        <li class="meals--ingridents"> <ion-icon name="checkmark-outline"
+                                class="icon"></ion-icon><span>Vegetarian</span> </li>
+                        <li class="meals--ingridents"> <ion-icon name="checkmark-outline"
+                                class="icon"></ion-icon><span>Vegan</span> </li>
+                        <li class="meals--ingridents"> <ion-icon name="checkmark-outline"
+                                class="icon"></ion-icon><span>Pescatarian</span> </li>
+                        <li class="meals--ingridents"> <ion-icon name="checkmark-outline"
+                                class="icon"></ion-icon><span>Gluten-free</span> </li>
+                        <li class="meals--ingridents"> <ion-icon name="checkmark-outline"
+                                class="icon"></ion-icon><span>Lactose-free</span> </li>
+                        <li class="meals--ingridents"> <ion-icon name="checkmark-outline"
+                                class="icon"></ion-icon><span>Keto</span> </li>
+                        <li class="meals--ingridents"> <ion-icon name="checkmark-outline"
+                                class="icon"></ion-icon><span>Paleo</span> </li>
+                        <li class="meals--ingridents"> <ion-icon name="checkmark-outline"
+                                class="icon"></ion-icon><span>Low
+                                FODMAP</span> </li>
+                        <li class="meals--ingridents"> <ion-icon name="checkmark-outline"
+                                class="icon"></ion-icon><span>Kid-friendly</span> </li>
+                    </ul>
                 </div>
             </div>
+            <div class="all--meals">
 
+                <a href="#" class="meals--link"> See more meals <b>&Rrightarrow;</b></a>
+            </div>
         </section>
     </main>
 </body>
