Add meals section with testimonials and gallery; update styles for improved layout and interactivity

--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
@@ -134,6 +134,7 @@
 
         <section class="section--meals">
             <div class="heading--meals">
+                <span class="sub--heading">Meals</span>
                 <p class="meals--tittle">Omnifood AI chooses from 5,000+ recipes</p>
             </div>
             <div class="containor grid grid--3-cols">
@@ -202,6 +203,120 @@
             <div class="all--meals">
 
                 <a href="#" class="meals--link"> See more meals <b>&Rrightarrow;</b></a>
+            </div>
+        </section>
+
+
+        <!-- Testimonial Sdection -->
+        <section class="testimonials gird grid--2-cols">
+            <div>
+                <div class="testimonial">
+                    <span class="subheadingg">testimonials</span>
+                    <h2 class="heading--secondary"> Once you try it, you can't go back</h2>
+                </div>
+                <div class="testimonials">
+                    <figure>
+                        <img src="img/customers/dave.jpg" alt="Dave photo" class="testimonial--img">
+                        <blockquote cite="cot">
+                            <p class="testimonial--text">
+                                Inexpensive, healthy and great-tasting meals, without even having to order manually! It
+                                feels truly magical.
+                            </p>
+
+
+                        </blockquote>
+                        <p class="testimonial--name">&mdash; Dave
+                            Bryson</p>
+                    </figure>
+
+                    <figure>
+                        <img src="img/customers/ben.jpg" alt="Ben photo" class="testimonial--img">
+                        <blockquote cite="cot">
+                            <p class="testimonial--text">
+                                The AI algorithm is crazy good, it chooses the right meals for me every time. It's
+                                amazing not to worry about food
+                                anymore!
+                            </p>
+
+
+                        </blockquote>
+                        <p class="testimonial--name">&mdash; Ben Hadley</p>
+                    </figure>
+
+
+
+                    <figure>
+                        <img src="img/customers/steve.jpg" alt="Steve photo" class="testimonial--img">
+                        <blockquote cite="cot">
+                            <p class="testimonial--text">
+                                Omnifood is a life saver! I just started a company, so there's no time for cooking. I
+                                couldn't live without my daily
+                                meals now!
+                            </p>
+
+
+                        </blockquote>
+                        <p class="testimonial--name">&mdash; Steve Miller</p>
+                    </figure>
+
+                    <figure>
+                        <img src="img/customers/hannah.jpg" alt="Dave photo" class="testimonial--img">
+                        <blockquote cite="cot">
+                            <p class="testimonial--text">
+                                I got Omnifood for the whole family, and it frees up so much time! Plus, everything is
+                                organic and vegan
+                                and without
+                                plastic.
+                            </p>
+
+
+                        </blockquote>
+                        <p class="testimonial--name">&mdash; Hannah Smith</p>
+                    </figure>
+                </div>
+            </div>
+
+            <!-- gallary section -->
+            <div class="gallery">
+
+                <figure class="gallery--img">
+                    <img src="img/gallery/gallery-1.jpg" alt="gallery">
+                    <!-- <figcaption>gallery</figcaption> -->
+                </figure>
+                <figure class="gallery--img">
+                    <img src="img/gallery/gallery-2.jpg" alt="gallery">
+                </figure>
+                <figure class="gallery--img">
+                    <img src="img/gallery/gallery-3.jpg" alt="gallery">
+                </figure>
+                <figure class="gallery--img">
+                    <img src="img/gallery/gallery-4.jpg" alt="gallery">
+                </figure>
+                <figure class="gallery--img">
+                    <img src="img/gallery/gallery-5.jpg" alt="gallery">
+                </figure>
+                <figure class="gallery--img">
+                    <img src="img/gallery/gallery-6.jpg" alt="gallery">
+                </figure>
+                <figure class="gallery--img">
+                    <img src="img/gallery/gallery-7.jpg" alt="gallery">
+                </figure>
+                <figure class="gallery--img">
+                    <img src="img/gallery/gallery-8.jpg" alt="gallery">
+                </figure>
+                <figure class="gallery--img">
+                    <img src="img/gallery/gallery-9.jpg" alt="gallery">
+                </figure>
+                <figure class="gallery--img">
+                    <img src="img/gallery/gallery-10.jpg" alt="gallery">
+                </figure>
+                <figure class="gallery--img">
+                    <img src="img/gallery/gallery-11.jpg" alt="gallery">
+                </figure>
+                <figure class="gallery--img">
+                    <img src="img/gallery/gallery-12.jpg" alt="gallery">
+                </figure>
+
             </div>
         </section>
     </main>
