Add pricing section with layout and styling enhancements

--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
@@ -319,6 +319,20 @@
 
             </div>
         </section>
+
+        <!-- pricing section -->
+        <section class="section--pricing">
+            <div>
+                <div class="heading--price">
+                    <span class="subheadingg">pricing</span>
+                    <h2 class="heading--secondary"> Eating well without breaking the bank</h2>
+                </div>
+                <div class="containor grid grid--2-cols">
+                    <div class="plan">plan 1</div>
+                    <div class="plan">plan 1</div>
+                </div>
+
+        </section>
     </main>
 </body>
 
