Add pricing section with layout, styling enhancements, and plan details

--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
@@ -327,10 +327,86 @@
                     <span class="subheadingg">pricing</span>
                     <h2 class="heading--secondary"> Eating well without breaking the bank</h2>
                 </div>
+
+                <!-- plan 1 -->
                 <div class="containor grid grid--2-cols">
-                    <div class="plan">plan 1</div>
-                    <div class="plan">plan 1</div>
+                    <div class="plan--box starter--box">
+                        <div class="plans">
+                            <p class="pricing--name">Starter</p>
+                            <p class="price"><span>&dollar;</span>399</p>
+                            <p class="per-meal">per month. that's just &dollar; 13 per meal</p>
+                        </div>
+                        <ul class="plan--details">
+                            <li class="plan--detail"> <ion-icon name="checkmark-outline" class="icon"></ion-icon><span>1
+                                    meal per day</span>
+                            </li>
+                            <li class="plan--detail"> <ion-icon name="checkmark-outline"
+                                    class="icon"></ion-icon><span>Order from 11am to 9pm</span>
+                            </li>
+                            <li class="plan--detail"> <ion-icon name="checkmark-outline"
+                                    class="icon"></ion-icon><span>Delivery is free</span>
+                            </li>
+                            <li class="plan--detail"> <ion-icon name="close-outline" class="icon"></ion-icon><span>Get
+                                    access to latest recipes</span>
+                            </li>
+                        </ul>
+                        <div class="plan--action">
+                            <a href="#" class="btn btn--filled">Start eating well</a>
+                        </div>
+                    </div>
+
+                    <!-- Prices include all applicable taxes. Users can cancel at any time. -->
+
+                    <!-- plan 2 -->
+                    <div class="plan--box complet--box">
+                        <div class="plans">
+                            <p class="pricing--name">Complet</p>
+                            <p class="price"><span>&dollar;</span>649</p>
+                            <p class="per-meal">per month. that's just &dollar; 11 per meal</p>
+
+                        </div>
+
+                        <ul class="plan--details">
+                            <li class="plan--detail"> <ion-icon name="checkmark-outline" class="icon"></ion-icon><span>2
+                                    meals per day</span>
+                            </li>
+                            <li class="plan--detail"> <ion-icon name="checkmark-outline"
+                                    class="icon"></ion-icon><span>Order 24/7</span>
+                            </li>
+                            <li class="plan--detail"> <ion-icon name="checkmark-outline"
+                                    class="icon"></ion-icon><span>Delivery is free</span>
+                            </li>
+                            <li class="plan--detail"> <ion-icon name="checkmark-outline"
+                                    class="icon"></ion-icon><span>Get access to latest recipes</span>
+                            </li>
+                        </ul>
+                        <div class="plan--action">
+                            <a href="#" class="btn btn--filled">Start eating well</a>
+                        </div>
+                    </div>
+
                 </div>
+            </div>
+
+            <!-- Meals & price detial -->
+            <div class="continor grid grid--4-cols">
+                <div class="feature--box">
+                    <ion-icon name="leaf-outline" class="feature--icon"></ion-icon>
+                    <p class="feature--text">100% organic</p>
+                </div>
+                <div class="feature--box">
+                    <ion-icon name="bicycle-outline" class="feature--icon"></ion-icon>
+                    <p class="feature--text">No delivery fees</p>
+                </div>
+                <div class="feature--box">
+                    <ion-icon name="stopwatch-outline" class="feature--icon"></ion-icon>
+                    <p class="feature--text">30 minutes delivery</p>
+                </div>
+                <div class="feature--box">
+                    <ion-icon name="nutrition-outline" class="feature--icon"></ion-icon>
+                    <p class="feature--text">100+ recipes</p>
+                </div>
+            </div>
 
         </section>
     </main>
