Adds plan details and CTA section
Adds a section to display plan features with icons and descriptions, enhancing user understanding of the subscription benefits.

Also, introduces a call-to-action (CTA) section with a background image and a two-column layout for promotional content.

--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
@@ -389,27 +389,51 @@
             </div>
 
             <!-- Meals & price detial -->
+            <div class="price--include">
+                <p class="price--include-text"><ion-icon name="leaf" class="feature--icon-fill"></ion-icon> Prices
+                    include all applicable taxes. You can cancel at any time. Both
+                    plan includes:
+                </p>
+            </div>
             <div class="continor grid grid--4-cols">
                 <div class="feature--box">
-                    <ion-icon name="leaf-outline" class="feature--icon"></ion-icon>
-                    <p class="feature--text">100% organic</p>
-                </div>
-                <div class="feature--box">
-                    <ion-icon name="bicycle-outline" class="feature--icon"></ion-icon>
-                    <p class="feature--text">No delivery fees</p>
-                </div>
-                <div class="feature--box">
-                    <ion-icon name="stopwatch-outline" class="feature--icon"></ion-icon>
-                    <p class="feature--text">30 minutes delivery</p>
+                    <ion-icon name="infinite-outline" class="feature--icon"></ion-icon>
+                    <p class="feature--title">Never cook again!</p>
+                    <p class="feature--text">Our subscriptions cover 365 days per year, even including major holidays.
+                    </p>
                 </div>
                 <div class="feature--box">
                     <ion-icon name="nutrition-outline" class="feature--icon"></ion-icon>
-                    <p class="feature--text">100+ recipes</p>
+                    <p class="feature--title">Local and organic</p>
+                    <p class="feature--text">Our cooks only use local, fresh, and organic products to prepare your
+                        meals.</p>
+                </div>
+                <div class="feature--box">
+                    <ion-icon name="leaf-outline" class="feature--icon"></ion-icon>
+                    <p class="feature--title">No waste</p>
+                    <p class="feature--text">All our partners only use reusable containers to package all your meals.
+                    </p>
+
+                </div>
+                <div class="feature--box">
+                    <ion-icon name="pause-outline" class="feature--icon"></ion-icon>
+                    <p class="feature--title">Pause anytime</p>
+                    <p class="feature--text">Going on vacation? Just pause your subscription, and we refund unused days.
+                    </p>
                 </div>
             </div>
 
         </section>
+
+        <section class="section--cta">
+            <div class="cta--box grid--2-cols">
+                <div class="cta--text">
+                </div>
+                <div class="cta--img" role="img" aria-label="Woman enjoy food ">img section</div>
+            </div>
+        </section>
     </main>
+
 </body>
 
 </html>
