Adds CTA form to gather user information
Implements a form within the Call To Action section to collect user details like name, email, and preferences.

This form aims to encourage user engagement by offering a free first meal and providing a simple sign-up process.

Also, styles the form elements and layout for better visual appeal and user experience.

--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
@@ -426,12 +426,64 @@
         </section>
 
         <section class="section--cta">
+
             <div class="cta--box grid--2-cols">
-                <div class="cta--text">
+
+                <div>
+                    <!-- form section -->
+                    <form action="#" class="cta--form">
+
+                        <div class="heading--secondary heading--form">
+                            <h2 class="heading--title">Get your first meal for free</h2>
+                            <p class="deiscription">Healthy, tasty and hassle-free meals are waiting for you. Start
+                                eating well today. You can cancel or pause anytime. And
+                                the first meal is on us!</p>
+                        </div>
+                        <div class=" form form--box">
+                            <div>
+                                <label for="full-name">full Name
+                                    <input id="full-name" type="text" placeholder="Alemayehu Wasie" required>
+                                </label>
+                            </div>
+
+                            <div>
+                                <label for="email">📩 Email
+                                    <input id="email" type="email" placeholder="example@gmail.com" required>
+                                </label>
+                            </div>
+
+                            <div>
+                                <label for="pasword">Password
+                                    <input type="password" name="" id="pasword" placeholder="🔐 ******" required>
+                                </label>
+                            </div>
+
+                            <div>
+                                <label for="value">Where do you hear fromus?
+                                    <select name="" id="value" required>
+                                        <option value="">Select one</option>
+                                        <option value="freind(family)"> freind and Family</option>
+                                        <option value="youtube">Youtube</option>
+                                        <option value="podcast">Podcast</option>
+                                        <option value="other">Other</option>
+                                    </select>
+                                </label>
+                            </div>
+                            <div>
+                                <button class="btn sign--in" type="submit">Sign in now</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
+
+
+                <!-- img section -->
                 <div class="cta--img" role="img" aria-label="Woman enjoy food ">img section</div>
             </div>
+
+
         </section>
+
     </main>
 
 </body>
