Adds footer section to the landing page
Adds a footer section with contact information, social links, company details, and resource links.
Also updates the main navigation links.
Improves site structure and user experience.

--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
@@ -23,11 +23,11 @@
         <img class="logo" src="img/omnifood-logo.png" alt="">
         <nav class="main--nav">
             <ul class="nav--list">
-                <li> <a class="navigation--link" href="#"> section 1</a> </li>
-                <li> <a class="navigation--link" href="#"> section 2</a> </li>
-                <li> <a class="navigation--link" href="#"> section 3</a> </li>
-                <li> <a class="navigation--link" href="#"> section 4</a> </li>
-                <li> <a class="navigation--link link--cta" href="#"> section 5</a> </li>
+                <li> <a class="navigation--link" href="#"> How it works</a> </li>
+                <li> <a class="navigation--link" href="#"> Meals</a> </li>
+                <li> <a class="navigation--link" href="#"> testimonials</a> </li>
+                <li> <a class="navigation--link" href="#"> Pricing</a> </li>
+                <li> <a class="navigation--link link--cta" href="#">Try for free</a> </li>
             </ul>
         </nav>
     </header>
@@ -485,6 +485,64 @@
         </section>
 
     </main>
+    <footer class="footer">
+        <div class="footer--5-cols">
+            <div class="footer--logo">
+                <a href="#"><img class="logo" src="img/omnifood-logo.png" alt="Footer Logo"></a>
+
+                <ul class="social--links">
+                    <li>
+                        <a href="#" class="social-icon"><ion-icon name="logo-instagram"></ion-icon> </a>
+                    </li>
+                    <li>
+                        <a href="#" class="social-icon"><ion-icon name="logo-facebook"></ion-icon> </a>
+                    </li>
+                    <li>
+                        <a href="#" class="social-icon"><ion-icon name="logo-twitter"></ion-icon> </a>
+                    </li>
+                </ul>
+                <p class="Copyright">Copyright &COPY; 2018 by omnifood, All rights is reserved. </p>
+
+            </div>
+            <div class="contact">
+                <p class="footer--heading">Contact us</p>
+                <address>
+                    <ion-icon name="location-outline"></ion-icon> Addis Ababa, Ethiopia
+                </address>
+                <p><ion-icon name="call-outline"></ion-icon> <a href="tel:"> 946-0834-21</a></p>
+                <p> <span><ion-icon name="mail-outline"></ion-icon> </span><a
+                        href="mailto:">solomontsehay54@gmail.com</a>
+                </p>
+            </div>
+            <nav class="footer--nav">
+                <p class="footer--heading">Account</p>
+                <ul>
+                    <li class="footer--link"><a href="#">Create account</a></li>
+                    <li class="footer--link"><a href="#"> About Omnifood</a> </li>
+                    <li class="footer--link"><a href="#"> For business</a> </li>
+                    <li class="footer--link"><a href="#"> Coocking paretners</a> </li>
+                </ul>
+            </nav>
+            <nav class="footer--nav">
+                <p class="footer--heading">Company</p>
+                <ul>
+                    <li class="footer--link"><a href="#">About Omnifood</a></li>
+                    <li class="footer--link"><a href="#">Sign in</a></li>
+                    <li class="footer--link"><a href="#">ios app</a></li>
+                    <li class="footer--link"><a href="#">Android app</a></li>
+                </ul>
+            </nav>
+            <nav class="footer--nav">
+                <p class="footer--heading">Resources</p>
+                <ul>
+                    <li class="footer--link"><a href="#">Recipe directory</a></li>
+                    <li class="footer--link">Help center</li>
+                    <li class="footer--link">Privacy & terms</li>
+                </ul>
+            </nav>
+        </div>
+
+    </footer>
 
 </body>
 
