Enhances responsive design with media queries and layout adjustments for testimonials and footer sections

--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
@@ -216,7 +216,7 @@
                     <span class="subheadingg">testimonials</span>
                     <h2 class="heading--secondary"> Once you try it, you can't go back</h2>
                 </div>
-                <div class="testimonials">
+                <div class="testimonials--box">
                     <figure>
                         <img src="img/customers/dave.jpg" alt="Dave photo" class="testimonial--img">
                         <blockquote cite="cot">
@@ -503,11 +503,10 @@
                         <a href="#" class="social-icon"><ion-icon name="logo-twitter"></ion-icon> </a>
                     </li>
                 </ul>
-                <p class="Copyright">Copyright &COPY; 2018 by omnifood, All rights is reserved. </p>
 
             </div>
             <div class="contact">
-                <p class="footer--heading">Contact us</p>
+                <div class="footer--heading">Contact us</div>
                 <address>
                     <ion-icon name="location-outline"></ion-icon> Addis Ababa, Ethiopia
                 </address>
@@ -538,12 +537,12 @@
                 <p class="footer--heading">Resources</p>
                 <ul>
                     <li class="footer--link"><a href="#">Recipe directory</a></li>
-                    <li class="footer--link">Help center</li>
-                    <li class="footer--link">Privacy & terms</li>
+                    <li class="footer--link"><a href="#"> Help center</a></li>
+                    <li class="footer--link"><a href="#"> Privacy & terms</a></li>
                 </ul>
             </nav>
+            <div class="Copyright">Copyright &COPY; 2018 by omnifood, All rights is reserved. </div>
         </div>
-
     </footer>
 
 </body>
