Enhances responsive design with media queries and layout adjustments for hero, footer, and CTA sections

--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <header class="header nav--open">
+    <header class="header">
         <a href="#"> <img class="logo" src="img/omnifood-logo.png" alt="Omnifood Logo">
         </a>
 
@@ -443,7 +443,7 @@
 
             <div class="cta--box grid--2-cols">
 
-                <div>
+                <div class="cta-form">
                     <!-- form section -->
                     <form action="#" class="cta--form">
 
@@ -500,59 +500,61 @@
 
     </main>
     <footer class="footer">
-        <div class="footer--5-cols">
-            <div class="footer--logo">
-                <a href="#"><img class="logo" src="img/omnifood-logo.png" alt="Footer Logo"></a>
+        <div>
+            <div class="footer--5-cols">
+                <div class="footer--logo">
+                    <a href="#"><img class="logo" src="img/omnifood-logo.png" alt="Footer Logo"></a>
 
-                <ul class="social--links">
-                    <li>
-                        <a href="#" class="social-icon"><ion-icon name="logo-instagram"></ion-icon> </a>
-                    </li>
-                    <li>
-                        <a href="#" class="social-icon"><ion-icon name="logo-facebook"></ion-icon> </a>
-                    </li>
-                    <li>
-                        <a href="#" class="social-icon"><ion-icon name="logo-twitter"></ion-icon> </a>
-                    </li>
-                </ul>
+                    <ul class="social--links">
+                        <li>
+                            <a href="#" class="social-icon"><ion-icon name="logo-instagram"></ion-icon> </a>
+                        </li>
+                        <li>
+                            <a href="#" class="social-icon"><ion-icon name="logo-facebook"></ion-icon> </a>
+                        </li>
+                        <li>
+                            <a href="#" class="social-icon"><ion-icon name="logo-twitter"></ion-icon> </a>
+                        </li>
+                    </ul>
 
+                </div>
+                <div class="contact">
+                    <div class="footer--heading">Contact us</div>
+                    <address>
+                        <ion-icon name="location-outline"></ion-icon> Addis Ababa, Ethiopia
+                    </address>
+                    <p><ion-icon name="call-outline"></ion-icon> <a href="tel:"> 946-0834-21</a></p>
+                    <p> <span><ion-icon name="mail-outline"></ion-icon> </span><a
+                            href="mailto:">solomontsehay54@gmail.com</a>
+                    </p>
+                </div>
+                <nav class="footer--nav">
+                    <p class="footer--heading">Account</p>
+                    <ul>
+                        <li class="footer--link"><a href="#">Create account</a></li>
+                        <li class="footer--link"><a href="#"> About Omnifood</a> </li>
+                        <li class="footer--link"><a href="#"> For business</a> </li>
+                        <li class="footer--link"><a href="#"> Coocking paretners</a> </li>
+                    </ul>
+                </nav>
+                <nav class="footer--nav">
+                    <p class="footer--heading">Company</p>
+                    <ul>
+                        <li class="footer--link"><a href="#">About Omnifood</a></li>
+                        <li class="footer--link"><a href="#">Sign in</a></li>
+                        <li class="footer--link"><a href="#">ios app</a></li>
+                        <li class="footer--link"><a href="#">Android app</a></li>
+                    </ul>
+                </nav>
+                <nav class="footer--nav">
+                    <p class="footer--heading">Resources</p>
+                    <ul>
+                        <li class="footer--link"><a href="#">Recipe directory</a></li>
+                        <li class="footer--link"><a href="#"> Help center</a></li>
+                        <li class="footer--link"><a href="#"> Privacy & terms</a></li>
+                    </ul>
+                </nav>
             </div>
-            <div class="contact">
-                <div class="footer--heading">Contact us</div>
-                <address>
-                    <ion-icon name="location-outline"></ion-icon> Addis Ababa, Ethiopia
-                </address>
-                <p><ion-icon name="call-outline"></ion-icon> <a href="tel:"> 946-0834-21</a></p>
-                <p> <span><ion-icon name="mail-outline"></ion-icon> </span><a
-                        href="mailto:">solomontsehay54@gmail.com</a>
-                </p>
-            </div>
-            <nav class="footer--nav">
-                <p class="footer--heading">Account</p>
-                <ul>
-                    <li class="footer--link"><a href="#">Create account</a></li>
-                    <li class="footer--link"><a href="#"> About Omnifood</a> </li>
-                    <li class="footer--link"><a href="#"> For business</a> </li>
-                    <li class="footer--link"><a href="#"> Coocking paretners</a> </li>
-                </ul>
-            </nav>
-            <nav class="footer--nav">
-                <p class="footer--heading">Company</p>
-                <ul>
-                    <li class="footer--link"><a href="#">About Omnifood</a></li>
-                    <li class="footer--link"><a href="#">Sign in</a></li>
-                    <li class="footer--link"><a href="#">ios app</a></li>
-                    <li class="footer--link"><a href="#">Android app</a></li>
-                </ul>
-            </nav>
-            <nav class="footer--nav">
-                <p class="footer--heading">Resources</p>
-                <ul>
-                    <li class="footer--link"><a href="#">Recipe directory</a></li>
-                    <li class="footer--link"><a href="#"> Help center</a></li>
-                    <li class="footer--link"><a href="#"> Privacy & terms</a></li>
-                </ul>
-            </nav>
             <div class="Copyright">Copyright &COPY; 2018 by omnifood, All rights is reserved. </div>
         </div>
     </footer>
