--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
@@ -15,6 +15,7 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
+
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/quieres.css">
     <title>Omnifood</title>
@@ -555,18 +556,11 @@
                     </ul>
                 </nav>
             </div>
-            <div class="Copyright">Copyright &COPY; 2018 by omnifood, All rights is reserved. </div>
+            <div class="Copyright">Copyright &COPY;<span class="year">2018</span> by omnifood, All rights is
+                reserved. </div>
         </div>
     </footer>
-
-    <!-- <script>
-    const navButton = document.querySelector('.mobile--nav');
-    const header = document.querySelector('.header');
-
-    navButton.addEventListener('click', function () {
-        header.classList.toggle('nav--open');
-    });
-</script> -->
+    <script src="./js/script.js"></script>
 
 </body>
 
